<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BlogDemo</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
  	<string name="main_home">博客</string>
    <string name="main_news">新闻</string>
    <string name="main_search">搜索</string>
	<string name="main_rss">订阅</string>
    <string name="main_more">更多</string>
    
    <!--以下用于存放SharedPreferences的Key-->
	<string name="preferences_key">currentTab</string>
	<!--启动tab-->
	<string name="preferences_current_tab">cnblogs_start_tab</string>
	
	<!-- 浏览模式：0-图文 1-文字 -->
	<string name="config_pic_mode">图文模式</string>
    <string name="config_text_mode">文字模式</string>
    
    <!--下拉刷新-->
	<string name="pull_to_refresh_more_label">加载更多</string>
	<string name="pull_to_refresh_release_label">释放刷新...</string>
	<string name="pull_to_refresh_tap_label">触摸下拉刷新...</string>
	<string name="pull_to_refresh_pull_label">下拉刷新...</string>
	<string name="pull_to_refresh_refreshing_label">数据加载中...</string>
	
	<!--菜单-->
	<string name="menu_bar_title">请选择操作</string>
	<string name="menu_common_view_content">查看内容</string>
	<string name="menu_common_view_comment">查看评论</string>
	<string name="menu_common_open_browser">在浏览器中查看</string>
	<string name="menu_common_share_to">分享到……</string>
	<string name="menu_blog_view_author">查看博主主页</string>
	
	<string name="sys_network_error">网络异常，请检查网络设置</string>
</resources>
